# data-weaver

./: .gitignore  .scalafmt.conf  Dockerfile  README.md  build.sbt
.bsp/: sbt.json
.github/workflows/: ci.yml  weaver-pipeline-ci.yml
airflow-operator/: pyproject.toml
airflow-operator/data_weaver_airflow/: __init__.py  operator.py
connectors/: build.sbt
connectors/src/test/resources/test_data/: sample.json
core/src/main/resources/schemas/: pipeline.schema.json
core/src/test/resources/: test_connections.yaml
core/src/test/resources/test_project/config/: application.conf
docs/connector-sdk/: CONNECTOR_SDK.md
docs/plans/: 2026-04-05-phase0-foundation.md  2026-04-05-phase1-local-engine-connectors.md
docs/specs/: 2026-04-05-data-weaver-v2-design.md
docs/tutorials/: 01-csv-to-parquet.yaml  02-multi-source-join.yaml  03-rag-pipeline.yaml  04-llm-classification.yaml  05-production-etl.yaml  06-web-scraping-llm.yaml
docs/tutorials/data/: sample_customers.csv  sample_docs.json  sample_orders.csv  sample_supermarket_pages.json  sample_tickets.csv
scripts/: docker-entrypoint.sh  install.sh
src/main/resources/: log4j.properties
src/main/scala/com/dataweaver/: Main.scala
src/main/scala/com/dataweaver/cache/: DataSourceCache.scala
src/main/scala/com/dataweaver/cli/: CommandLineInterface.scala  CommandLineInterface2.scala
src/main/scala/com/dataweaver/config/: AppConfig.scala  ArgsParser.scala  DataPipelineConfig.scala  package.scala  (+4 more)
src/test/resources/test_project/config/: application.conf
src/test/resources/test_project/pipelines/: pipeline.yaml
(+116 files in other folders)
